# megra_police_http_server

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_server.sh
